Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108405

bounding volume results are not checked for validity in concurrent calcuation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.4.3, 6.5.0, 6.6.0
    • 6.4.0
    • Qt3D
    • None
    • Linux/X11
    • 23a043245 (dev), f9657e06d (6.4), a2978e5ee (6.5)

    Description

      There is one important difference between the single threaded and the concurrent flow of calculating the bounding volumes: the linear one checks for validity of the results, the concurrent one doesn't. This leads to crashes in my application, as non valid bounding boxes are added to be processed later, which then access the entity-pointer set to nullptr.

      The single threaded path is inĀ src/core/jobs/calcboundingvolumejob.cpp, line 288, the concurrent on line 143.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            eringerli Christian Riggenbach
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes